--- a/components/product/index.css
+++ b/components/product/index.css
@@ -90,10 +90,17 @@
 }
 
 .Product-title {
-  display: block;
-  margin: 0 0 0.4rem;
-  font-size: 2.75rem;
+  margin-bottom: 0.5em;
+  font-size: 2rem;
   font-weight: bold;
+  line-height: 1.25;
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .Product-title {
+    font-size: 2.75rem;
+    line-height: 1.2;
+  }
 }
 
 .Product-properties {
